test/execution/test_7/chaos.txt
$ sh chaos.sh 4 stocktrader test
[2018-08-13 18:53:16]: Begin of script

Delay: 4
Namespace: stocktrader
Unique ID (Helm release): test

Deleting Pod test-notification-slack-869f48667-7lj9c...
pod "test-notification-slack-869f48667-7lj9c" deleted

Deleting Pod test-stock-quote-67cf64c6cb-p77rl...
pod "test-stock-quote-67cf64c6cb-p77rl" deleted

Deleting Pod test-messaging-c5c5854fc-klw44...
pod "test-messaging-c5c5854fc-klw44" deleted

Deleting Pod test-portfolio-5cdb8f98d-tj9xn...
pod "test-portfolio-5cdb8f98d-tj9xn" deleted

Deleting Pod test-messaging-c5c5854fc-xb5x9...
pod "test-messaging-c5c5854fc-xb5x9" deleted

Deleting Pod test-notification-slack-869f48667-xvm5m...
pod "test-notification-slack-869f48667-xvm5m" deleted

Deleting Pod test-stock-quote-67cf64c6cb-5z9jv...
pod "test-stock-quote-67cf64c6cb-5z9jv" deleted

Deleting Pod test-portfolio-5cdb8f98d-22wqj...
pod "test-portfolio-5cdb8f98d-22wqj" deleted

Deleting Pod test-stock-quote-67cf64c6cb-whjvl...
pod "test-stock-quote-67cf64c6cb-whjvl" deleted

Deleting Pod test-stock-quote-67cf64c6cb-5cz47...
pod "test-stock-quote-67cf64c6cb-5cz47" deleted

Deleting Pod test-stock-quote-67cf64c6cb-ft5r8...
pod "test-stock-quote-67cf64c6cb-ft5r8" deleted

Deleting Pod test-notification-slack-869f48667-qvhmc...
pod "test-notification-slack-869f48667-qvhmc" deleted

Deleting Pod test-notification-slack-869f48667-8chqv...
pod "test-notification-slack-869f48667-8chqv" deleted

Deleting Pod test-stock-quote-67cf64c6cb-58gp8...
pod "test-stock-quote-67cf64c6cb-58gp8" deleted

Deleting Pod test-notification-slack-869f48667-dgb9d...
pod "test-notification-slack-869f48667-dgb9d" deleted

Deleting Pod test-portfolio-5cdb8f98d-mlghv...
pod "test-portfolio-5cdb8f98d-mlghv" deleted

Deleting Pod test-messaging-c5c5854fc-kvl5n...
pod "test-messaging-c5c5854fc-kvl5n" deleted

Deleting Pod test-portfolio-5cdb8f98d-mlghv...
Error from server (NotFound): pods "test-portfolio-5cdb8f98d-mlghv" not found

Deleting Pod test-messaging-c5c5854fc-2lb9m...
pod "test-messaging-c5c5854fc-2lb9m" deleted

Deleting Pod test-notification-slack-869f48667-n5j8f...
pod "test-notification-slack-869f48667-n5j8f" deleted

Deleting Pod test-portfolio-5cdb8f98d-jnltt...
pod "test-portfolio-5cdb8f98d-jnltt" deleted

Deleting Pod test-stock-quote-67cf64c6cb-j4wfd...
pod "test-stock-quote-67cf64c6cb-j4wfd" deleted

Deleting Pod test-notification-slack-869f48667-l4gd2...
pod "test-notification-slack-869f48667-l4gd2" deleted

Deleting Pod test-stock-quote-67cf64c6cb-v65lh...
pod "test-stock-quote-67cf64c6cb-v65lh" deleted

Deleting Pod test-stock-quote-67cf64c6cb-pff2z...
pod "test-stock-quote-67cf64c6cb-pff2z" deleted

Deleting Pod test-messaging-c5c5854fc-ccn6g...
pod "test-messaging-c5c5854fc-ccn6g" deleted

Deleting Pod test-messaging-c5c5854fc-8l4f5...
pod "test-messaging-c5c5854fc-8l4f5" deleted

Deleting Pod test-portfolio-5cdb8f98d-gm9lp...
pod "test-portfolio-5cdb8f98d-gm9lp" deleted

Deleting Pod test-portfolio-5cdb8f98d-c485c...
pod "test-portfolio-5cdb8f98d-c485c" deleted

Deleting Pod test-stock-quote-67cf64c6cb-gcd58...
pod "test-stock-quote-67cf64c6cb-gcd58" deleted

^C